--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 </head>
 <body>
 	<div class="container">
-		<header>
+		<header class="header">
 			<nav>
 				<div class="main-bar">
 					<div class="left-part">
 						<img src="img/menu.png" alt="climber" class="climber-img">
-							<p>explore</p>
-							<p>event</p>
-							<p>achievements</p>
-							<p>top ten</p>
-						
+						<p>explore</p>
+						<p>event</p>
+						<p>achievements</p>
+						<p>top ten</p>
 					</div>
 					<div class="right-part">
 						<p>signup</p>
