[FIX] mobile layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Mountains</title>
 	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<div class="container">
@@ -31,10 +32,10 @@
 			</div>
 			<div class="footer">
 				<div class="face">
-					<img src="img/layer_1.png" alt="person">
-					<img src="img/layer_2.png" alt="person">
-					<img src="img/layer_3.png" alt="person">
-					<img src="img/layer_4.png" alt="person">
+					<img src="img/Layer_1.png" alt="person">
+					<img src="img/Layer_2.png" alt="person">
+					<img src="img/Layer_3.png" alt="person">
+					<img src="img/Layer_4.png" alt="person">
 				</div>
 				<div class="make">
 					<img src="img/ic_confirmation_number_white_48dp.png" alt="icon" class="icon-square">
